# Late_potentials_research

./: pyproject.toml
Analyse_databases/: 01_Create_classification_table_main.py  By_hand_classifier_main.py  LOG.txt  Pdf_report_creator.py  Pdf_report_creator_by_plot_ecg_record.py  Pdf_report_creator_by_ui_selector_processing.py  class_UIselector.py  class_record.py  logfile.csv  main.py  ptb-diagnostic-ecg-database-1.0.0_logfile.csv
Analyse_databases/modules/: Analog_filters.py  DOCX.py  FILES_processing_lib.py  PDF.py  WFDB.py  Withdrawal_tools.py
Create simple late potentials database/: Calculate_datasets.py  Create_LVP_LAP_classification_metadata.py  empty.py  features_LAP_avg_avg_Normal__.csv  features_LAP_avg_avg_Patology__.csv  features_LAP_avg_custom_Normal__.csv  features_LAP_avg_custom_Patology__.csv  features_LVP_avg_avg_Normal__.csv  features_LVP_avg_avg_Patology__.csv  features_LVP_avg_custom_Normal__.csv  features_LVP_avg_custom_Patology__.csv  ptb-diagnostic-ecg-database-1.0.0_logfile.csv  run_machine_learning.py
Features_and_low_amplitude_components_testing/: Artifitial_signal_creation.py  Method1_cardiocycles_averaging.py  calculate similarity.py
Late_potentials_modelling/: main.py
